# open-sousveillance-studio

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  WORK_NOTES.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  start-all.ps1  stop-all.ps1
.streamlit/: config.toml
config/: civic_categories.yaml  discovered_resources.yaml  entities.yaml  instance.yaml  scraper_health.json  sources.yaml  watchdog_rules.yaml
config/source_playbooks/: _index.yaml  alachua-civicclerk.yaml  florida-public-notices.yaml  srwmd-applications.yaml  srwmd-epermitting.yaml  srwmd-issuances.yaml
docs/: ARCHITECTURE.md  CODING_STANDARDS.md  DEVELOPER_GUIDE.md  LOGGING.md  PROJECT-KNOWLEDGE-BASE.md  PROJECT_MANAGEMENT.md  PROJECT_PLAN.md  SOURCE_DIRECTORY.md  SPEC.md  SYSTEM_OVERHAUL.md  SYSTEM_OVERVIEW.md  USER_GUIDE.md  research-request-for-context-agent.md  work_notes_2026-01-20_prompt-optimization.md
migrations/: 001_scraped_meetings.sql  001_vector_schema.sql  002_civic_events.sql
project_knowledgebase/: Mill Creek Sink Links - Background.docx  Strategy Notes - Start Here.docx
prompt_library/: README.md
prompt_library/config/: agent-behavioral-standards.md  alachua-context.md  geographic-scope.md  source-registry.md
prompt_library/examples/: sample-outputs.md
prompt_library/layer-1-scouts/: A1-meeting-intelligence-scout.md  A2-permit-application-scout.md  A3-legislative-code-monitor.md  A4-entity-relationship-mapper.md
prompt_library/layer-2-analysts/: B1-impact-assessment-analyst.md  B2-procedural-integrity-analyst.md
prompt_library/layer-3-synthesizers/: C1-public-education-content-generator.md  C2-strategic-campaign-planner.md  C3-quarterly-democratic-health-scorecard.md  C4-annual-review-and-forecast.md
prompt_library/templates/: newsletter-format.md  public-comment-template.md  report-output-standard.md  social-media-templates.md
scripts/: analyze_sources.py  discover_sitemaps.py
src/: __init__.py  app.py  config.py  database.py  exceptions.py  llm_cost.py  logging_config.py  main.py  models.py  orchestrator.py  schemas.py  state.py  tools.py
src/agents/: __init__.py  analyst.py  base.py  scout.py
src/api/routes/: workflows.py
src/intelligence/: __init__.py  event_store.py  health.py  models.py  rules_engine.py
src/intelligence/adapters/: __init__.py  base_adapter.py  civicclerk_adapter.py  florida_notices_adapter.py  srwmd_adapter.py
src/prompts/: __init__.py  context.py  loader.py
src/tasks/: celery_app.py  scout_tasks.py
src/tools/: __init__.py  chunking.py  civicclerk_scraper.py  embeddings.py  firecrawl_client.py  florida_notices_scraper.py  gemini_research.py  langchain_tools.py  rag_pipeline.py  resource_cache.py  srwmd_scraper.py  vector_store.py
src/ui/: __init__.py  app.py
src/ui/pages/: __init__.py  agent_runner.py  config_viewer.py  health_dashboard.py  orchestrator_panel.py  prompt_inspector.py  source_tester.py
src/workflows/: graphs.py
test/: conftest.py  test_agents.py  test_api.py  test_config.py  test_health.py  test_intelligence.py  test_orchestrator.py  test_schemas.py  test_scrapers.py  test_tools.py
